Overlapping elements issue fixed

--- a/src/app/-tool-recursive-palette-element/-tool-recursive-palette-element.component.css
+++ b/src/app/-tool-recursive-palette-element/-tool-recursive-palette-element.component.css
@@ -35,7 +35,7 @@ ul {
   display: none;
 }
 
-.NthLevelElement:hover app--tool-recursive-palette-element{
+.NthLevelElement:hover > app--tool-recursive-palette-element{
   display: block;
   position: absolute;
   top: 0;
